--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "ai": "^3.0.0",
+    "@ai-sdk/openai": "^1.0.0",
+    "zod": "^3.22.4",
+    "openai": "^4.20.0",
+    "ml-kmeans": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
